--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,4 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 
+@import 'sweetalert2/src/sweetalert2.scss';
